@@ -19,28 +19,19 @@
 
 package fr.ign.cogit.geoxygene.feature;
 
-import java.sql.Time;
-import java.util.ArrayList;
-import java.util.Collection;
-import java.util.HashSet;
-import java.util.Iterator;
-import java.util.Set;
-
-import javax.persistence.Entity;
-import javax.persistence.Id;
-import javax.persistence.ManyToOne;
-import javax.persistence.Transient;
-
-import fr.ign.cogit.geoxygene.api.feature.IDataSet;
-import fr.ign.cogit.geoxygene.api.feature.IExtraction;
-import fr.ign.cogit.geoxygene.api.feature.IFeature;
-import fr.ign.cogit.geoxygene.api.feature.IFeatureCollection;
-import fr.ign.cogit.geoxygene.api.feature.IPopulation;
+import fr.ign.cogit.geoxygene.api.feature.*;
 import fr.ign.cogit.geoxygene.api.spatial.coordgeom.IEnvelope;
 import fr.ign.cogit.geoxygene.api.spatial.geomroot.IGeometry;
 import fr.ign.cogit.geoxygene.schema.schemaConceptuelISOJeu.FeatureType;
 import fr.ign.cogit.geoxygene.spatial.coordgeom.GM_Envelope;
 import fr.ign.cogit.geoxygene.util.index.Tiling;
+
+import javax.persistence.Entity;
+import javax.persistence.Id;
+import javax.persistence.ManyToOne;
+import javax.persistence.Transient;
+import java.sql.Time;
+import java.util.*;
 
 /**
  * Une population représente TOUS les objets d'une classe héritant de
@@ -534,7 +525,7 @@ public class Population<Feat extends IFeature> extends
   @Override
   public Feat nouvelElement(IGeometry geom) {
     try {
-      Feat elem = this.getClasse().newInstance();
+      Feat elem = this.getClasse().getConstructor().newInstance();
       elem.setId(++Population.idNouvelElement);
       elem.setGeom(geom);
       elem.setPopulation(this);
